# Chat-RN

./: .config  .gitignore  CMakeLists.txt  Makefile  README.md  chatrn.c  chatrn.h  chatrnd.c  client.c  server.c
client/: client.c  client.h  config.c  config.h  session.c  session.h
include/: common.h
ipc/: ipc.c  ipc.h
server/: pending.c  pending.h  server.c  server.h
